Correct label for dashboard

--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -171,7 +171,7 @@ In addition, one can favorite stocks to keep a running list of stocks to view wi
   \centering
   \includegraphics[width=1\columnwidth]{resources/dashboard.png} % Example image
   \caption{Example dashboard containing stock history, sentiment, and favorites.}
-  \label{fig:git}
+  \label{fig:dashboard}
 \end{figure}
 \subsection{Our goal}
 The goal of Market Chirp is to quickly analyze the public's opinion of high-quality stocks through short notes on Twitter. Since the feed of Tweets is queried in real time when a user searches for a certain stock, the sentiment analysis of a stock is the public's current opinion of whether a stock is bullish or bearish. For example, if a stock's market price is on a downhill trend but its Twitter sentiment is on an uptrend, one may take that as an indication to buy the stock. This is because the temperature of a company in the eye of the public is often a good indicator of their stock's future performance on the market. Market Chirp's ultimate goal is not to predict the stock market as the sentiment is based on limited dataset of people tweeting about a stock, however it can give insight into the future of the stock based on public opinion.
@@ -314,7 +314,7 @@ After analyzing our common queries, we added indicies to our database to improve
   \end{figure}
 
   Our Tsung tests used the test user arrival rates shown in Figure \ref{graph:users}. A tabulation of the phases of users arrival rates can be seen below.\\
-  
+
 \begin{figure}[H]
   \begin{center}
     \begin{tabular}{| c | c | c | c | c | c | c | c | c | c | c |}
