--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -79,6 +79,7 @@
 \newcommand{\mainSectionName}{}
 \newenvironment{mainSection}[1]{ % Makes a new environment called homeworkProblem which takes 1 argument (custom name) but the default is "Problem #"
 \renewcommand{\mainSectionName}{#1} % Assign \homeworkProblemName the name of the problem
+\pagebreak
 \section{\mainSectionName} % Make a section in the document with the custom problem count
 \enterSectionHeader{\mainSectionName} % Header and footer within the environment
 }{
@@ -170,15 +171,15 @@ In addition, one can favorite stocks to keep a running list of stocks to view wi
   \centering
   \includegraphics[width=1\columnwidth]{resources/dashboard.png} % Example image
   \caption{Example dashboard containing stock history, sentiment, and favorites.}
-  \label{fig:git}
+  \label{fig:dashboard}
 \end{figure}
+\pagebreak
 \subsection{Our goal}
-The goal of Market Chirp is to quickly analyze the public's opinion of high-quality stocks through short notes on Twitter. Since the feed of Tweets is queried in real time when a user searches for a certain stock, the sentiment analysis of a stock is the public's current opinion of whether a stock is bullish or bearish. For example, if a stock's market price is on a downhill trend but its Twitter sentiment is on an uptrend, one may take that as an indication to buy the stock. This is because the temperature of a company in the eye of the public is often a good indicator of their stock's future performance on the market. Market Chirp's ultimate goal is not to predict the stock market as the sentiment is based on limited dataset of people tweeting about a stock, however it can give insight into the future of the stock based on public opinion.
+The goal of Market Chirp is to quickly analyze the public's opinion of high-quality stocks through short notes on Twitter. Since the feed of Tweets is queried in real time when a user searches for a certain stock, the sentiment analysis of a stock is the public's current opinion of whether a stock is bullish or bearish. For example, if a stock's market price is on a downhill trend but its Twitter sentiment is on an uptrend, one may take that as an indication to buy the stock. This is because the temperature of a company in the eye of the public is often a good indicator of their stock's future performance on the market. Market Chirp's ultimate goal is not to predict the stock market as the sentiment is based on limited data set of people tweeting about a stock, however it can give insight into the future of the stock based on public opinion.
 \\
 \subsection{How we do it}
 Market Chirp is implemented in Ruby on Rails (Ruby 2.2.1 and Rails 4.2.4). The backend data store is a relational database management system, in our case MySQL. Since the purpose of CS 188/219: Scalable Internet Services is to build and deploy a scalable web service, this report will therefore discuss the deployment, performance and scalability of Market Chirp.
 \end{mainSection}
-\pagebreak
 
 \begin{mainSection}{Development Process}
 \begin{figure}[h]
@@ -216,7 +217,6 @@ Another development strategy we made use of was pair programming. This was true 
 \\
 
 \end{mainSection}
-\pagebreak
 
 \begin{mainSection}{Testing}
   \subsection{Server configuration}
@@ -335,14 +335,14 @@ After analyzing our common queries, we added indicies to our database to improve
   \end{enumerate}
 
   \subsection{Initial testing}
-  The first tests of Market Chirp showed massive performance issues.  Twitter sentiment data was calculated for all 100 tweets (pulled from Twitter separately for each request), leading to $20+$ second delays in getting results when searching for a stock symbol.  From looking at the logs and \texttt{top}, it was clear that the process was CPU bound.  No formal Tsung testing happened at this performance level because individual page loadings took too long and the service was not ready for even a single user.\\
+  The first tests of Market Chirp showed massive performance issues.  Twitter sentiment data was calculated for all 100 tweets (pulled from Twitter separately for each request), leading to $20+$ second delays in getting results when searching for a stock symbol. During this period, the webpage was unresponsive to the user and appeared to be frozen. From looking at the logs and \texttt{top}, it was clear that the process was CPU bound.  No formal Tsung testing happened at this performance level because individual page loads took too long and the service was not ready for even a single user.\\
 
-  A MySQL driven "cache" was created to store Twitter analysis data for a day, for each stock that was searched.  While initial stock searches caused unreasonable delays of $20+$ seconds, subsequent delays were much, much faster, happening in less than $5$ seconds.  The cache stores the overall calculated sentiment and it stores a single tweet out of the $100$ sampled tweets that has the closest sentiment value as an average tweet for the given sample.\\
+  A MySQL driven "cache" was created to store Twitter analysis for a day, for each stock that was searched.  While initial stock searches caused unreasonable delays of $20+$ seconds, subsequent delays were much, much smaller, happening in less than $5$ seconds.  The cache stores the overall calculated sentiment and the single tweet out of the $100$ sampled tweets that has the closest sentiment value as an average tweet for the given sample.\\
 
-  A similar MySQL driven caching system as added to cache the 10 years of Yahoo! Finance stock data downloaded for each symbol requested.  The stock data itself was stored as a JSON text blob, as the client side graphing library read in that JSON.  It made more sense to store the JSON received from Yahoo! Finance in the same format that the graph required, than it did to parse the JSON, store each value individually, and read those values out as JSON later.
+  A similar MySQL driven caching system was added to cache the 10 years of Yahoo! Finance stock data downloaded and current stock data for each symbol requested.  The stock data itself was stored as a JSON text blob, as the client side graphing library read in that JSON.  It made more sense to store the JSON received from Yahoo! Finance in the same format that the graph required, than it did to parse the JSON, store each value individually, and read those values out as JSON later.
 
   \subsection{Vertical scaling}
-  Vertical scaling, simply throwing more processing power at the problem, is simple but expensive.  We expected to get marginal performance gains by scaling vertically because our main bottleneck was the CPU bound Twitter sentiment analysis.
+  Vertical scaling, simply throwing more processing power at the problem, is simple but expensive.  We expected to get marginal performance gains by scaling vertically because our main bottleneck was the CPU bound Twitter sentiment analysis. To test the response of our application to an increasing load when equipped with more raw power, we set up a number of instances of increasing size. We chose the M3 family of instances to test on as they gave a nice balance of computational capabilities, memory, and network resources. 
 
   \begin{figure}[H]
     \begin{center}
